--- a/pdf.html
+++ b/pdf.html
@@ -30,18 +30,19 @@
 
                 <h2 class="mb-2">Sobre</h2>
                 <p class="my-0">
-                    Profissional com experiência em desenvolvimento full stack, atuando com .NET 8, Vue.js, SQL, Azure
-                    DevOps e AWS para infraestrutura. Ao longo de três anos na CEABS Serviços, venho aplicando práticas
-                    modernas de engenharia de software como TDD, Clean Code, S.O.L.I.D e Design Patterns, sempre aliado
-                    a metodologias ágeis e boas práticas de versionamento. Anteriormente, na Agrorobótica, atuei tanto
-                    como cientista de dados quanto desenvolvedor utilizando Python/Flask. Participei da estruturação de
-                    soluções em nuvem pelo programa Microsoft Founders Hub (Azure). Como cientista de dados, desenvolvi
-                    modelos preditivos e de classificação, além de trabalhar com séries temporais e controle estatístico
-                    de
-                    processos.
-                    Minha trajetória com programação começou no mestrado e doutorado pela USP São Carlos, em parceria
-                    com a Embrapa Instrumentação, quando acompanhei a criação e incubação da Agrorobótica e iniciei meus
-                    estudos em Matlab e Python aplicados à análise de dados químicos.
+                    Profissional com experiência em desenvolvimento full stack, atuando em projetos que conectam
+                    tecnologia a resultados de negócio.
+                    Na CEABS Serviços, contribuí para o desenvolvimento de sistemas de rastreamento e gestão
+                    de risco de frotas e cargas, oferecendo maior segurança, visibilidade em tempo real e redução de
+                    perdas.
+                    Na Agrorobótica, participei da criação de soluções digitais para agricultura de precisão e
+                    sustentabilidade, apoiando a análise de solos, a geração de recomendações agronômicas e a
+                    monetização de créditos de carbono.
+                    Essa trajetória começou no mestrado e doutorado pela USP São Carlos, em parceria com a Embrapa
+                    Instrumentação, onde desenvolvi métodos e modelos de análise preditiva aplicados a dados químicos.
+                    Ao longo dessa jornada, aprimorei habilidades em desenvolvimento de sistemas, análise de dados e
+                    modelagem preditiva, sempre apoiado por metodologias ágeis e boas práticas de engenharia de
+                    software.
                 </p>
             </div>
         </section>
@@ -69,40 +70,27 @@
                         <div class="subheading mb-3">CEABS Serviços | Segurança e Inovação</div>
                         <ul>
                             <li>
-                                Desenvolvimento em Backend com C# - .NET 6/8, ASP.NET MVC, APIs RESTful, JWT
+                                Participação ativa na estrutaração do novo CRM/ERP da empresa, como definições de
+                                padrões, documentações técnicas, refinamento dos requisitos do sistema. Geração de
+                                economia financeira por conta da licença do antigo CRM em Outsystems
                             </li>
                             <li>
-                                Desenvolvimento em Frontend com Vue.js - Vue3, VueX, Vite, Vuetify, Pinia, Router,
-                                TypeScript.
-                            </li>
-                            <li>
-                                Utilização de banco de dados relacional e ORM (Dapper e EF6) - SQL Server.
-                            </li>
-                            <li>
-                                Testes unitários aplicando TDD em xUnit.
-                            </li>
-                            <li>
-                                Versionamento utilizando Git CI/CD com Azure DevOps.
-                            </li>
-                            <li>
-                                Boas práticas de desenvolvimento como Clean Code, S.O.L.I.D. e design Patters.
-                            </li>
-                            <li>
-                                Aplicação de metodologias Ágeis (Scrum e Kanban).
-                            </li>
-                            <li>
-                                Utilização do pacote Atlassian - Jira e Confluence.
-                            </li>
-                            <li>
-                                Utilização de ferramentas de design - Figma.
-                            </li>
-                            <li>
-                                Atuação inicial como suporte de sistemas legado na equipe de sustentação.
+                                Desenvolvimento de novos sistemas para agendamentos de instalações para clientes como
+                                Stellantis e
+                                rastreamento veicular FLUA.
                             </li>
                             <li>
                                 Desenvolvimento, implementação e manutenção dos projetos de Gerenciamento de Serviços de
                                 TI (ITSM)
-                                via Jira Service Management para os times de Produtos.
+                                via Jira Service Management para os times de Produtos, com criação de fluxos
+                                automatizados e indicadores de SLA,
+                                permitindo maior visibilidade e controle sobre chamados e performance das equipes.
+                            </li>
+                            <li>
+                                Atuação como desenvolvedor full stack de aplicações internas para rastreamento veicular.
+                                Partipação no time de sustentação e suporte de sistemas legado, correções de bugs,
+                                incidentes e
+                                melhorias.
                             </li>
                         </ul>
                     </div>
@@ -118,18 +106,19 @@
                         <div class="subheading mb-3">AGROROBÓTICA - Fotônica em Certificações Agroambientais</div>
                         <ul>
                             <li>
-                                Full Stack de aplicações internas em Python/Flask em ambiente Linux.
+                                Full Stack de aplicações internas.
                             </li>
                             <li> Interface entre os dados gerados pelos métodos tradicionais de análise química do solos
-                                e a plataforma de IA AGLIBS; coordenação da geração e emissão de laudos comerciais e
+                                e a plataforma de IA AGLIBS;
+                            <li>
+                                Coordenação da geração e emissão de laudos comerciais e
                                 crédito de carbono.
                             </li>
                             <li>
-                                Análises exploratórias em dados espectrais utilizando MATLAB e Python (NumPy, Pandas,
-                                Scikit-learn, Matplotlib)
+                                Análises exploratórias em dados espectrais.
                             </li>
                             <li>
-                                Estruturação e arquitetura de computação em nuvem (Microsoft Founders Hub - Azure).
+                                Estruturação e arquitetura de computação em nuvem (Azure).
                             </li>
                             <li>
                                 Análise e ciência de dados (ETL) com aplicações em quimiometria, desenvolvimento de
@@ -138,7 +127,7 @@
                             </li>
                             <li>
                                 Desenvolvimento da plataforma interativa do cliente utilizando ferramentas gráficas em
-                                Python como Plotly e Seaborn.
+                                Python.
                             </li>
                             <li>
                                 Colaboração no desenvolvimento dos inventários para créditos de carbono de acordo com a
@@ -173,13 +162,15 @@
                                 emissão do laudo e mapas de recomendação agronômica ao cliente;
                             </li>
                             <li>
+                                Líder integrante da equipe técnica de implementação da ISO 17025 no laboratório.
+                            </li>
+                            <li>
                                 Químico responsável pela coordenação e liderança do laboratório químico com CRQ ativo;
                             </li>
                             <!-- <li> Estruturação física e operacional do laboratório químico, incluindo seleção de
                                 equipamentos,
                                 vidrarias e reagentes, bem como fornecedores e triagem deorçamentos;
                             </li> -->
-                            <li> Líder integrante da equipe técnica de implementação da ISO 17025 no laboratório.</li>
                         </ul>
                     </div>
                 </div>
@@ -213,22 +204,27 @@
                         </div>
                         <div class="subheading mb-3">EMBRAPA Instrumentação</div>
                         <ul>
-                            <li>Modelagem preditiva e estatística aplicada à matéria orgânica do solo e humificação, com
-                                uso de MATLAB e Python para análise multivariada e calibração de dados espectrais.</li>
-                            <li>Construção e validação de modelos para análise de solos utilizando espectroscopias
+                            <li>
+                                Modelagem preditiva e estatística aplicada à matéria orgânica do solo e humificação para
+                                análise multivariada e calibração de dados espectrais.</li>
+                            <li>
+                                Construção e validação de modelos para análise de solos utilizando espectroscopias
                                 avançadas.
                             </li>
                             <!-- <li>Construção e validação de modelos para análise de solos utilizando espectroscopias
                                 avançadas: LIBS (Laser-Induced Breakdown Spectroscopy), LIFS (Laser-Induced Fluorescence
                                 Spectroscopy) e FAAS (Espectroscopia de Absorção Atômica).</li> -->
-                            <li>Desenvolvimento de métodos e modelos de predição aplicados à química e ciência do solo,
+                            <li>
+                                Desenvolvimento de métodos e modelos de predição aplicados à química e ciência do solo,
                                 com foco na quantificação de carbono e nutrientes em diferentes sistemas produtivos.
                             </li>
-                            <li>Avaliação do acúmulo e emissão de carbono do solo sob diferentes práticas de manejo,
+                            <li>
+                                Avaliação do acúmulo e emissão de carbono do solo sob diferentes práticas de manejo,
                                 integrando análises espectroscópicas e estatísticas para modelagem de estoque de carbono
                                 e gases do efeito estufa.
                             </li>
-                            <li>Estudos com resíduos agroindustriais para uso como biofertilizantes, incluindo
+                            <li>
+                                Estudos com resíduos agroindustriais para uso como biofertilizantes, incluindo
                                 desenvolvimento de metodologias para caracterização química e impacto na qualidade do
                                 solo.
                             </li>
@@ -359,10 +355,12 @@
                             <li>Backend com C# (.NET 6/8, ASP.NET, APIs RESTful, MVC)</li>
                             <li>Frontend com Vue.js (Vue3, Vite, Vuetify, Pinia, Router), HTML, CSS, TypeScript</li>
                             <li>Python (Flask, PyQt, PySide6)</li>
-                            <li>Testes unitários, versionamento (Git), CI/CD com Azure DevOps</li>
-                            <li>Banco de Dados (SQL Server)</li>
-                            <li>Clean Code, S.O.L.I.D. e TDD</li>
+                            <li>Testes unitários aplicando TDD e xUnit</li>
+                            <li>Versionamento (Git), CI/CD com Azure DevOps</li>
+                            <li>Banco de Dados (SQL Server) e ORM (Dapper e EF6)</li>
                             <li>Design patterns</li>
+                            <li>Boas práticas de desenvolvimento como Clean Code, S.O.L.I.D. e Design Patters.</li>
+                            <li>Experiência em ambiente Linux
                         </ul>
                     </li>
 
@@ -413,15 +411,24 @@
 
                 <div class="page-break"></div>
 
-                <div class="subheading mb-1"> <strong>Idiomas </strong></div>
+                <div class="subheading mb-3"> <strong>Idiomas </strong></div>
                 <ul class="fa-ul mb-0">
-                    <li>Inglês – Leitura e escrita em nível intermediário; fala em nível básico.</li>
-                    <li>Proficiência TEAP da TESE PRIME com pontuação: 88/100.</li>
-                    <li>Proficiência WAP da TESE PRIME com potuação: 70/100.</li>
+                    <li>
+                        <span class="fa-li"><span class="fi fi-us"></span></span>
+                        Inglês – Leitura e escrita em nível intermediário; fala em nível básico.
+                    </li>
+                    <li>
+                        <span class="fa-li"><span class="fi fi-us"></span></span>
+                        Proficiência TEAP da TESE PRIME com pontuação: 88/100.
+                    </li>
+                    <li>
+                        <span class="fa-li"><span class="fi fi-us"></span></span>
+                        Proficiência WAP da TESE PRIME com potuação: 70/100.
+                    </li>
                 </ul>
             </div>
 
-            <hr />
+            <hr class="my-3" />
 
             <div class="resume-section-content">
                 <h2 class="my-3">Competências</h2>
@@ -579,6 +586,10 @@
                 linkedin.com/in/alfredoapxavier
             </li>
             <li class="contactList__item">
+                <span class="fa-li"><i class="fab fa-github"></i></span>
+                github.com/alfredoxavier
+            </li>
+            <li class="contactList__item">
                 <span class="fa-li"><i class="fas fa-phone"></i></span>
                 (16) 99792-8260
             </li>
@@ -590,6 +601,7 @@
     </aside>
 
     <!-- Bootstrap core JS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/6.6.6/css/flag-icons.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
     <!-- Third party plugin JS-->
