--- a/pdf.html
+++ b/pdf.html
@@ -415,7 +415,7 @@
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><span class="fi fi-us"></span></span>
-                        Inglês – Leitura e escrita em nível intermediário; fala em nível básico.
+                        Inglês – Nível intermediário.
                     </li>
                     <li>
                         <span class="fa-li"><span class="fi fi-us"></span></span>
@@ -518,27 +518,21 @@
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        [FUNEP] Inventários de gases de efeito estufa, fontes e sumidouros em áreas agrícolas (8
-                        horas)
+                        [FUNEP] Inventários de gases de efeito estufa, fontes e sumidouros em áreas agrícolas.
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        [AGROROBÓTICA] ISO 17025 - Líder e integrante da equipe técnica na implementação do
-                        sistema da qualidade
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        [Solugest] Sistema de Gestão de Laboratório conforme a NBR ISO/IEC 17025:2017 (8 horas)
+                        [Solugest] Sistema de Gestão de Laboratório conforme a NBR ISO/IEC 17025:2017.
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
                         [Solugest] Determinação de Incerteza de Medição e Validação de Métodos de Ensaio e de
-                        Calibração (8 horas)
+                        Calibração.
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
                         [Solugest] Auditorias Internas de Sistema de Gestão de Laboratório NBR ISO/IEC 17025:2017
-                        (8 horas)
+                       .
                     </li>
                 </ul>
 
