--- a/pdfOnePage.html
+++ b/pdfOnePage.html
@@ -227,7 +227,7 @@
 
         <div class="subheading mb-1"><strong>Idiomas</strong></div>
         <ul>
-          <li>Inglês – leitura/escrita intermediária; fala básica.</li>
+          <li>Inglês – Nível intermediária.</li>
           <li>Proficiência TEAP (TESE PRIME): 88/100.</li>
           <li>Proficiência WAP (TESE PRIME): 70/100.</li>
         </ul>
