--- a/pdf.html
+++ b/pdf.html
@@ -70,14 +70,13 @@
                         <div class="subheading mb-3">CEABS Serviços | Segurança e Inovação</div>
                         <ul>
                             <li>
-                                Participação ativa na estrutaração do novo CRM/ERP da empresa, como definições de
-                                padrões, documentações técnicas, refinamento dos requisitos do sistema. Geração de
-                                economia financeira por conta da licença do antigo CRM em Outsystems
+                                Participação ativa na estruturação do novo CRM/ERP da empresa, incluindo definições de
+                                padrões, documentação técnica e refinamento dos requisitos do sistema, gerando economia
+                                financeira devido à substituição da licença do antigo CRM em Outsystems.
                             </li>
                             <li>
-                                Desenvolvimento de novos sistemas para agendamentos de instalações para clientes como
-                                Stellantis e
-                                rastreamento veicular FLUA.
+                                Desenvolvimento de novos sistemas para agendamento de instalações para clientes como
+                                Stellantis e rastreamento veicular FLUA.
                             </li>
                             <li>
                                 Desenvolvimento, implementação e manutenção dos projetos de Gerenciamento de Serviços de
@@ -88,9 +87,8 @@
                             </li>
                             <li>
                                 Atuação como desenvolvedor full stack de aplicações internas para rastreamento veicular.
-                                Partipação no time de sustentação e suporte de sistemas legado, correções de bugs,
-                                incidentes e
-                                melhorias.
+                                Participação no time de sustentação e suporte de sistemas legados, incluindo correções
+                                de bugs, incidentes e melhorias.
                             </li>
                         </ul>
                     </div>
@@ -106,13 +104,14 @@
                         <div class="subheading mb-3">AGROROBÓTICA - Fotônica em Certificações Agroambientais</div>
                         <ul>
                             <li>
-                                Full Stack de aplicações internas.
+                                Full stack de aplicações internas.
                             </li>
-                            <li> Interface entre os dados gerados pelos métodos tradicionais de análise química do solos
-                                e a plataforma de IA AGLIBS;
                             <li>
-                                Coordenação da geração e emissão de laudos comerciais e
-                                crédito de carbono.
+                                Interface entre os dados gerados pelos métodos tradicionais de análise química de solos
+                                e a plataforma de IA AGLIBS.
+                            </li>
+                            <li>
+                                Coordenação da geração e emissão de laudos comerciais e créditos de carbono.
                             </li>
                             <li>
                                 Análises exploratórias em dados espectrais.
@@ -134,7 +133,7 @@
                                 VM0042 - VERRA.
                             </li>
                             <li>
-                                Validação dos métodos analíticos (ISO 17025) desenvolvidos utilizando espectroscopia.
+                                Validação de métodos analíticos (ISO 17025) desenvolvidos utilizando espectroscopia.
                             </li>
                         </ul>
                     </div>
@@ -150,22 +149,20 @@
                         </div>
                         <div class="subheading mb-3">AGROROBÓTICA - Fotônica em Certificações Agroambientais</div>
                         <ul>
-                            <li> Implementação de métodos de análise de fertilidade do solo, com o objetivo de geração
-                                dados
-                                de referência dos modelos de predição
+                            <li> Implementação de métodos de análise de fertilidade do solo, com o objetivo de gerar
+                                dados de referência para modelos de predição.
                             </li>
-                            <li> Elaboração e validação dos métodos analíticos para geração de dados de referências para
-                                amostras de solo utilizando a Espectroscopia (ICP-OES);
+                            <li> Elaboração e validação de métodos analíticos para geração de dados de referência de
+                                amostras de solo utilizando Espectroscopia (ICP-OES).
                             </li>
-                            <li> Aperfeiçoamento dos processos internos da empresa (PDCA), os quais abrangem desde a
-                                coleta à
-                                emissão do laudo e mapas de recomendação agronômica ao cliente;
+                            <li> Aperfeiçoamento dos processos internos da empresa (PDCA), abrangendo desde a coleta até
+                                a emissão do laudo e mapas de recomendação agronômica ao cliente.
                             </li>
                             <li>
                                 Líder integrante da equipe técnica de implementação da ISO 17025 no laboratório.
                             </li>
                             <li>
-                                Químico responsável pela coordenação e liderança do laboratório químico com CRQ ativo;
+                                Químico responsável pela coordenação e liderança do laboratório químico com CRQ ativo.
                             </li>
                             <!-- <li> Estruturação física e operacional do laboratório químico, incluindo seleção de
                                 equipamentos,
@@ -183,9 +180,8 @@
                         </div>
                         <div class="subheading mb-3">Poliedro Educação</div>
                         <ul>
-                            <li>Trabalho editorial para simulados do Sistema de Avaliação
-                                Educacional
-                                Poliedro (SAEP);
+                            <li>Trabalho editorial para simulados do Sistema de Avaliação Educacional
+                                Poliedro (SAEP).
                             </li>
                             <!-- <li>Criação edição e resolução de questões para simulados do Sistema de Avaliação
                                 Educacional
@@ -206,7 +202,8 @@
                         <ul>
                             <li>
                                 Modelagem preditiva e estatística aplicada à matéria orgânica do solo e humificação para
-                                análise multivariada e calibração de dados espectrais.</li>
+                                análise multivariada e calibração de dados espectrais.
+                            </li>
                             <li>
                                 Construção e validação de modelos para análise de solos utilizando espectroscopias
                                 avançadas.
@@ -359,8 +356,8 @@
                             <li>Versionamento (Git), CI/CD com Azure DevOps</li>
                             <li>Banco de Dados (SQL Server) e ORM (Dapper e EF6)</li>
                             <li>Design patterns</li>
-                            <li>Boas práticas de desenvolvimento como Clean Code, S.O.L.I.D. e Design Patters.</li>
-                            <li>Experiência em ambiente Linux
+                            <li>Boas práticas de desenvolvimento como Clean Code, S.O.L.I.D. e Design Patterns.</li>
+                            <li>Experiência em ambiente Linux</li>
                         </ul>
                     </li>
 
@@ -418,12 +415,10 @@
                         Inglês – Nível intermediário.
                     </li>
                     <li>
-                        <span class="fa-li"><span class="fi fi-us"></span></span>
-                        Proficiência TEAP da TESE PRIME com pontuação: 88/100.
+                        Proficiência TEAP da TESE PRIME com pontuação: 88/100. 
                     </li>
                     <li>
-                        <span class="fa-li"><span class="fi fi-us"></span></span>
-                        Proficiência WAP da TESE PRIME com potuação: 70/100.
+                        Proficiência WAP da TESE PRIME com pontuação: 70/100.
                     </li>
                 </ul>
             </div>
@@ -435,7 +430,7 @@
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Ótimo relacionamento em equipe
+                        Boa colaboração em equipe
                     </li>
 
                     <li>
@@ -504,8 +499,7 @@
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        [LinkedIn] Fundamentos da Tecnologia Blockchain — Competências: Blockchain · Ciência de
-                        dados
+                        [LinkedIn] Fundamentos da Tecnologia Blockchain — Competências: Blockchain · Ciência de dados
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -531,8 +525,7 @@
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        [Solugest] Auditorias Internas de Sistema de Gestão de Laboratório NBR ISO/IEC 17025:2017
-                       .
+                        [Solugest] Auditorias Internas de Sistema de Gestão de Laboratório NBR ISO/IEC 17025:2017.
                     </li>
                 </ul>
 
@@ -547,8 +540,8 @@
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        Vencedor Prêmio Nacional Vale-Capes de Ciência e Sustentabilidade, edição 2015.
-                        Dissertação de mestrado na área temática: Redução de Gases do efeito estufa (GEE).
+                        Vencedor do Prêmio Nacional Vale-Capes de Ciência e Sustentabilidade, edição 2015.
+                        Dissertação de mestrado na área temática: Redução de Gases do Efeito Estufa (GEE).
                         <p>Disponível em:
                             <a href="https://www.gov.br/capes/pt-br/assuntos/noticias/cerimonia-consagra-melhores-trabalhos-sobre-sustentabilidade-no-pais"
                                 target="_blank">
@@ -567,7 +560,6 @@
 
         <div class="contactCard">
             <img class="contactCard__avatar" src="assets/img/profile4.jpg" alt="Foto de Alfredo Xavier">
-
         </div>
 
         <ul class="fa-ul contactList">
