--- a/pdf-higor.html
+++ b/pdf-higor.html
@@ -433,11 +433,18 @@
                             <li>Coordenação técnica de laboratório e P&D</li>
                         </ul>
                     </li>
-                </ul>
 
+                    <li><span class="fi fi-us"></span> <strong>Idiomas:</strong>
+                        <ul>
+                            <li> Inglês – Nível intermediário - B2.</li>
+                            <li>Proficiência TEAP da TESE PRIME com pontuação: 88/100.</li>
+
+                        </ul>
+                    </li>
+                </ul>
                 <!-- <div class="page-break"></div> -->
 
-                <div class="subheading mb-3"> <strong>Idiomas </strong></div>
+                <!-- <div class="subheading mb-3"> <strong>Idiomas </strong></div>
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><span class="fi fi-us"></span></span>
@@ -446,7 +453,7 @@
                     <li>
                         Proficiência TEAP da TESE PRIME com pontuação: 88/100.
                     </li>
-                </ul>
+                </ul> -->
             </div>
 
             <hr class="my-3" />
