--- a/pdf-higor.html
+++ b/pdf-higor.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Alfredo Xavier - Currículo WEB</title>
+    <title>Alfredo Xavier - CV</title>
     <link rel="icon" type="image/x-icon" href="assets/img/icon.jpg" />
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet"
@@ -76,8 +76,8 @@
         <!-- Interests-->
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
-                <h2 class="mb-2">Objetivo</h2>
-                <p class="mb-0">Oportunidade na área de TI — Desenvolvedor Full Stack</p>
+                <h2 class="my-2">Objetivo</h2>
+                <p class="mb-y">Oportunidade na área de TI — Desenvolvedor Full Stack</p>
             </div>
         </section>
 
@@ -85,7 +85,7 @@
         <!-- Experience-->
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
-                <h2 class="mb-2">Experiência profissional</h2>
+                <h2 class="my-2">Experiência profissional</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <div class="d-flex justify-content-between align-items-center mb-2">
